--- a/charts/complete-auth-service/templates/ory-hydra-strip-middleware.yaml
+++ b/charts/complete-auth-service/templates/ory-hydra-strip-middleware.yaml
@@ -1,7 +1,7 @@
 apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
 metadata:
-  name: "{{ include ".helm.fullname" . }}-ory-keto-strip"
+  name: "{{ include ".helm.fullname" . }}-ory-hydra-strip"
   namespace: {{ .Values.namespace }}
 spec:
   stripPrefixRegex:
