renamed the condition

--- a/charts/complete-auth-service/Chart.yaml
+++ b/charts/complete-auth-service/Chart.yaml
@@ -38,4 +38,4 @@ dependencies:
   - name: hydra
     version: "0.31.0"
     repository: "https://k8s.ory.sh/helm/charts"
-    condition: hydra.enabled
+    condition: hydra.cloud
