--- a/charts/complete-auth-service/templates/test-stack-deployment.yaml
+++ b/charts/complete-auth-service/templates/test-stack-deployment.yaml
@@ -64,7 +64,7 @@ spec:
             - secretRef:
                 name: "auth-service-secret"
             - configMapRef:
-                name: "{{ .Release.Name }}-ory-keto-configmap"           
+                name: "{{ .Release.Name }}-ory-configmap"
             - configMapRef:
                 name: "baseline-configmap"
           livenessProbe:
