--- a/charts/kafka-rest/templates/Ingressroute.yaml
+++ b/charts/kafka-rest/templates/Ingressroute.yaml
@@ -14,4 +14,5 @@ spec:
           kind: Service
           port: 8082
       middlewares:
-      - name: "kafka-strip"
+      - name: "{{ include ".helm.fullname" . }}-strip"
+      - name: "{{ include ".helm.fullname" . }}-forward-auth"
