--- a/charts/kafka-rest/templates/strip-middleware.yaml
+++ b/charts/kafka-rest/templates/strip-middleware.yaml
@@ -1,7 +1,7 @@
 apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
 metadata:
-  name: "kafka-strip"
+  name: "{{ include ".helm.fullname" . }}-strip"
   namespace: hanwha
 spec:
   stripPrefixRegex:
