--- a/charts/complete-auth-service/values.yaml
+++ b/charts/complete-auth-service/values.yaml
@@ -25,7 +25,7 @@ image:
   repository: ghcr.io/htaic/auth-service
   pullPolicy: Always
   containerPort: 3000
-  tag: "sha-5c2d386"
+  tag: "latest"
   hostname: auth
   domainPath: "auth"
   env:
@@ -863,7 +863,7 @@ kratos:
     enabled: false
   kratos:
     automigration:
-      enabled: true
+      enabled: false
       customCommand:
         - kratos
       customArgs:
@@ -974,7 +974,7 @@ kratos:
 keto:
   keto:
     automigration:
-      enabled: true
+      enabled: false
       customCommand:
         - keto
     config:
@@ -1004,7 +1004,7 @@ hydra:
     enabled: false
   hydra:
     automigration:
-      enabled: true
+      enabled: false
       customCommand:
         - hydra
     config:
