--- a/charts/hasura/charts/anaheim-authentication-service/Chart.yaml
+++ b/charts/hasura/charts/anaheim-authentication-service/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: hasura
+name: anaheim-authentication-service
 description: A dependent Helm chart for Kubernetes micro auth services
 
 # A chart can be either an 'application' or a 'library' chart.
@@ -15,15 +15,11 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.0.4
+version: 0.0.3
 
-dependencies:
-  - name: anaheim-authentication-service
-    version: "^0"
-    repository: "file://./charts/anaheim-authentication-service"
+
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 appVersion: "0.0.1"
-
