--- a/charts/hasura/charts/anaheim-authentication-service/values.yaml
+++ b/charts/hasura/charts/anaheim-authentication-service/values.yaml
@@ -7,7 +7,10 @@ image:
   pullPolicy: Always
   containerPort: 9876
   hostname: auth-service
-  #env:
+  # env:
+  #   - name: COOKIEOPTIONS_DOMAIN
+  #     value: ""
+
 imagePullSecrets:
   - name: dockerconfigjson-github-com
 
