--- a/charts/anaheim-training-assets-service/templates/pv.yaml
+++ b/charts/anaheim-training-assets-service/templates/pv.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.storage (not (hasKey .Values.storage "disableCreate")) }}
+# {{- if and .Values.storage (not (hasKey .Values.storage "disableCreate")) }}
 apiVersion: v1
 kind: PersistentVolume
 metadata:
@@ -15,4 +15,4 @@ spec:
   csi:
     driver: {{ .Values.storage.provisioner }}
     {{- toYaml .Values.storage.csi | nindent 4 }}
-{{- end }}
+# {{- end }}
