fix: DEVO-1081;DEVO-1080;DEVO-1079

--- a/charts/anaheim-training-assets-service/values.yaml
+++ b/charts/anaheim-training-assets-service/values.yaml
@@ -17,7 +17,7 @@ image:
       - hasura-secret
   env:
     - name: GRAPHQLURL
-      value: "http://hasura:8080/v1/graphql"
+      value: "http://anaheim-graphql-service-hasura:8080/v1/graphql"
     - name: STORAGE_BASE_PATH
       value: "/assets"
 
