--- a/charts/anaheim-annotator-service/values.yaml
+++ b/charts/anaheim-annotator-service/values.yaml
@@ -13,7 +13,7 @@ image:
       - hasura-secret
   env:
     - name: GRAPHQLURL
-      value: "http://hasura:8080/v1/graphql"
+      value: "http://anaheim-graphql-service-hasura:8080/v1/graphql"
 
 imagePullSecrets:
   - name: dockerconfigjson-github-com
