--- a/charts/anaheim-baseline/values.yaml
+++ b/charts/anaheim-baseline/values.yaml
@@ -15,6 +15,10 @@ traefik:
     web:
       nodePort: 32414
       targetPort: web
+  providers:
+    kubernetesCRD:
+      allowCrossNamespace: true
+      allowExternalNameServices: true
 
 redis:
   redis:
