fix: defaults domain path on training asset

--- a/charts/anaheim-training-assets-service/values.yaml
+++ b/charts/anaheim-training-assets-service/values.yaml
@@ -1,6 +1,6 @@
 namespace: "hanwha"
 fullnameOverride: anaheim-training-assets-service
-domainPath: "assets"
+domainPath: "training-assets"
 
 
 image:
