test: DEVO-1109 update helm

--- a/charts/anaheim-portal/charts/anaheim-container/templates/deployment.yaml
+++ b/charts/anaheim-portal/charts/anaheim-container/templates/deployment.yaml
@@ -44,6 +44,8 @@ spec:
           envFrom: 
             - secretRef:
                 name: "hasura-secret"
+            - configMapRef:
+                name: "{{ .Release.Name }}-configmap"
           {{- if .Values.image.env }}
           env: 
             {{- toYaml .Values.image.env | nindent 12 }}
