--- a/charts/anaheim-portal/charts/anaheim-verification-portlet/templates/deployment.yaml
+++ b/charts/anaheim-portal/charts/anaheim-verification-portlet/templates/deployment.yaml
@@ -41,6 +41,9 @@ spec:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          envFrom: 
+            - configMapRef:
+                name: "{{ .Release.Name }}-configmap"
           {{- if .Values.image.env }}
           env: 
             {{- toYaml .Values.image.env | nindent 12 }}
