--- a/charts/anaheim-portal/Chart.yaml
+++ b/charts/anaheim-portal/Chart.yaml
@@ -15,7 +15,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.0.5
+version: 0.0.6
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
@@ -32,4 +32,5 @@ dependencies:
     repository: "file://./charts/anaheim-training-portlet"
   - name: anaheim-verification-portlet
     version: "^0"
-    repository: "file://./charts/anaheim-verification-portlet
+    repository: "file://./charts/anaheim-verification-portlet"
+    
