--- a/charts/anaheim-portal/charts/anaheim-verification-portlet/Chart.yaml
+++ b/charts/anaheim-portal/charts/anaheim-verification-portlet/Chart.yaml
@@ -34,4 +34,4 @@ dependencies:
     repository: "file://./charts/anaheim-training-portlet"
   - name: anaheim-verification-portlet
     version: "^0"
-    repository: "file://./charts/anaheim-verification-portlet
+    repository: "file://./charts/anaheim-verification-portlet"
