add base url postfix foir swagger documentation

--- a/charts/anaheim-training-assets-service/values.yaml
+++ b/charts/anaheim-training-assets-service/values.yaml
@@ -20,6 +20,8 @@ image:
       value: "http://anaheim-graphql-service-hasura:8080/v1/graphql"
     - name: STORAGE_BASE_PATH
       value: "/assets"
+    - name: BASE_URL_POSTFIX
+      value: "training-assets"  
 
 imagePullSecrets:
   - name: dockerconfigjson-github-com
