--- a/charts/anaheim-portal/templates/portal-params.yaml
+++ b/charts/anaheim-portal/templates/portal-params.yaml
@@ -7,3 +7,4 @@ data:
   VITE_DEV_APP_VERIFICATION: "/verify/assets/remoteEntry.js"
   VITE_PROJECTS_API: "/projects"
   VITE_ASSETS_API: "/training-assets"
+  VITE_ANNOTATOR_API: "/annotations"
