--- a/charts/anaheim-project-service/values.yaml
+++ b/charts/anaheim-project-service/values.yaml
@@ -14,6 +14,7 @@ image:
   envFrom:
     secretRefs:
       - hasura-secret
+      - aws-eventbridge-secret
   env:
     - name: GRAPHQLURL
       value: "http://anaheim-graphql-service-hasura:8080/v1/graphql"
