chore: add training assets env variable

--- a/charts/anaheim-project-service/values.yaml
+++ b/charts/anaheim-project-service/values.yaml
@@ -20,6 +20,8 @@ image:
   env:
     - name: GRAPHQLURL
       value: "http://anaheim-graphql-service-hasura:8080/v1/graphql"
+    - name: TRAINING_ASSETS_SERVICE_URL
+      value: "http://anaheim-training-assets-service:3010"
 
 imagePullSecrets:
   - name: dockerconfigjson-github-com
