fix: bug in baseline

--- a/charts/anaheim-baseline/templates/aws-eventbridge-secret.yaml
+++ b/charts/anaheim-baseline/templates/aws-eventbridge-secret.yaml
@@ -5,3 +5,4 @@ metadata:
 data:
   AWS_ACCESS_KEY: {{ .Values.AWS.event_bridge_key_id | b64enc }}
   AWS_SECRET_ACCESS_KEY: {{ .Values.AWS.event_bridge_key_secret | b64enc }}
+  AWS_EVENT_BUS_ARN: {{ .Values.AWS.event_bus_arn | b64enc }}
