--- a/charts/anaheim-baseline/templates/aws-configmap.yaml
+++ b/charts/anaheim-baseline/templates/aws-configmap.yaml
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: "aws-account-configmap"
-data:
-  AWS_REGION: {{ .Values.AWS.region | b64enc }}
-  AWS_ACCOUNT_ID: {{ .Values.AWS.accountId | b64enc }}
+stringData:
+  AWS_REGION: {{ .Values.AWS.region }}
+  AWS_ACCOUNT_ID: {{ .Values.AWS.accountId }}
