--- a/charts/anaheim-eventbridge/templates/deployment.yaml
+++ b/charts/anaheim-eventbridge/templates/deployment.yaml
@@ -44,6 +44,16 @@ spec:
           {{- if .Values.image.env }}
           env: 
             {{- toYaml .Values.image.env | nindent 12 }}
+            - name: ACCESS_KEY_ID
+              valueFrom:
+                secretKeyRef:
+                  name: aws-eventbridge-secret
+                  key: AWS_ACCESS_KEY
+            - name: SECRET_ACCESS_KEY_ID
+              valueFrom:
+                secretKeyRef:
+                  name: aws-eventbridge-secret
+                  key: AWS_SECRET_ACCESS_KEY
           {{- end }}
           {{- if .Values.image.envFrom }}
           envFrom:
@@ -61,20 +71,20 @@ spec:
             - name: http
               containerPort: {{ .Values.image.containerPort }}
               protocol: TCP
-          livenessProbe:
-            httpGet:
-              path: /{{ .Values.image.livenessProbe }}
-              port: http
-            {{- if .Values.image.livenessProbePeriodSeconds }}
-            periodSeconds: {{ .Values.image.livenessProbePeriodSeconds }}
-            {{- end }}
-          readinessProbe:
-            httpGet:
-              path: /{{ .Values.image.readinessProbe }}
-              port: http
-            {{- if .Values.image.readinessProbePeriodSeconds }}
-            periodSeconds: {{ .Values.image.readinessProbePeriodSeconds }}
-            {{- end }}
+          # livenessProbe:
+          #   httpGet:
+          #     path: /{{ .Values.image.livenessProbe }}
+          #     port: http
+          #   {{- if .Values.image.livenessProbePeriodSeconds }}
+          #   periodSeconds: {{ .Values.image.livenessProbePeriodSeconds }}
+          #   {{- end }}
+          # readinessProbe:
+          #   httpGet:
+          #     path: /{{ .Values.image.readinessProbe }}
+          #     port: http
+          #   {{- if .Values.image.readinessProbePeriodSeconds }}
+          #   periodSeconds: {{ .Values.image.readinessProbePeriodSeconds }}
+          #   {{- end }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
