--- a/charts/anaheim-baseline/templates/aws-configmap.yaml
+++ b/charts/anaheim-baseline/templates/aws-configmap.yaml
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: "aws-account-configmap"
-stringData:
+data:
   AWS_REGION: {{ .Values.AWS.region }}
-  AWS_ACCOUNT_ID: {{ .Values.AWS.accountId }}
+  AWS_ACCOUNT_ID: "{{ .Values.AWS.accountId }}"
