[LOKI-412] Anaheim Portal initial values

--- a/charts/anaheim-portal/charts/anaheim-training-portlet/values.yaml
+++ b/charts/anaheim-portal/charts/anaheim-training-portlet/values.yaml
@@ -14,6 +14,10 @@ image:
       value: "http://anaheim-graphql-service-hasura:8080/v1/graphql"
     - name: GRAPHQLWSURL
       value: "wss://anaheim-graphql-service-hasura:8080/v1/graphql"
+    - name: VITE_CREATE_PROJECT
+      value: true
+    - name: VITE_DELETE_PROJECT
+      value: true
 
 imagePullSecrets:
   - name: dockerconfigjson-github-com
