[LOKI-412] update traning portler values

--- a/charts/anaheim-portal/charts/anaheim-training-portlet/values.yaml
+++ b/charts/anaheim-portal/charts/anaheim-training-portlet/values.yaml
@@ -15,9 +15,9 @@ image:
     - name: GRAPHQLWSURL
       value: "wss://anaheim-graphql-service-hasura:8080/v1/graphql"
     - name: VITE_CREATE_PROJECT
-      value: true
+      value: "false"
     - name: VITE_DELETE_PROJECT
-      value: true
+      value: "true"
 
 imagePullSecrets:
   - name: dockerconfigjson-github-com
