--- a/charts/anaheim-portal/charts/anaheim-training-portlet/templates/deployment.yaml
+++ b/charts/anaheim-portal/charts/anaheim-training-portlet/templates/deployment.yaml
@@ -42,10 +42,17 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           envFrom: 
+            - secretRef:
+                name: "hasura-secret"
             - configMapRef:
                 name: "{{ .Release.Name }}-configmap"
-          {{- if .Values.image.env }}
           env: 
+            - name: GRAPHQLSERVERTOKEN
+              valueFrom:
+                secretKeyRef:
+                  name: hasura-secret
+                  key: HASURA_GRAPHQL_ADMIN_SECRET
+          {{- if .Values.image.env }}
             {{- toYaml .Values.image.env | nindent 12 }}
           {{- end }}
           args: [ {{.Values.image.args}} ]
