[LOKI-412] reset env values

--- a/charts/anaheim-portal/charts/anaheim-training-portlet/values.yaml
+++ b/charts/anaheim-portal/charts/anaheim-training-portlet/values.yaml
@@ -17,7 +17,7 @@ image:
     - name: VITE_CREATE_PROJECT
       value: "false"
     - name: VITE_DELETE_PROJECT
-      value: "true"
+      value: "false"
 
 imagePullSecrets:
   - name: dockerconfigjson-github-com
