--- a/charts/anaheim-wavesync-adapter-service/values.yaml
+++ b/charts/anaheim-wavesync-adapter-service/values.yaml
@@ -14,6 +14,8 @@ image:
   env:
     - name: GRAPHQLURL
       value: "http://anaheim-graphql-service-hasura:8080/v1/graphql"
+    - name: WAVESYNC_BASE_URL
+      value: https://sync.wavevms.com
 
 imagePullSecrets:
   - name: dockerconfigjson-github-com
