[LOKI-542] fix feature flags values + add endpoint

--- a/charts/anaheim-portal/templates/portal-params.yaml
+++ b/charts/anaheim-portal/templates/portal-params.yaml
@@ -8,3 +8,4 @@ data:
   VITE_PROJECTS_API: "/projects"
   VITE_ASSETS_API: "/training-assets"
   VITE_ANNOTATOR_API: "/annotations"
+  VITE_FEATURE_FLAGS_API: "/feature-flags-service"
