--- a/charts/anaheim-wavesync-adapter-service/values.yaml
+++ b/charts/anaheim-wavesync-adapter-service/values.yaml
@@ -16,6 +16,8 @@ image:
       value: "http://anaheim-graphql-service-hasura:8080/v1/graphql"
     - name: WAVESYNC_BASE_URL
       value: "https://sync.wavevms.com"
+    - name: WAVESYNC_BOOKMARKS_URL
+      value: "relay-la.vmsproxy.com/rest/v2/devices/*/bookmarks"
 
 imagePullSecrets:
   - name: dockerconfigjson-github-com
