Update deployment.yaml again

--- a/charts/anaheim-training-assets-service/templates/deployment.yaml
+++ b/charts/anaheim-training-assets-service/templates/deployment.yaml
@@ -44,6 +44,10 @@ spec:
           envFrom: 
             - secretRef:
                 name: "aws-eventbridge-secret"
+            - configMapRef: 
+                name: "aws-account-configmap"
+
+                
           env: 
             - name: GRAPHQLSERVERTOKEN
               valueFrom:
