--- a/charts/anaheim-training-assets-service/values.yaml
+++ b/charts/anaheim-training-assets-service/values.yaml
@@ -9,14 +9,14 @@ image:
   containerPort: 3010
   tag: "latest"
   hostname: anaheim-training-assets-service
-  envFrom:
-    secretRefs:
-      - hasura-secret
+  
   env:
     - name: GRAPHQLURL
       value: "http://anaheim-graphql-service-hasura:8080/v1/graphql"
     - name: STORAGE_BASE_PATH
       value: "/assets"
+    - name: FF_SHARE_ACROSS_VERSION
+      value: "false"
 
 
 imagePullSecrets:
