--- a/charts/anaheim-portal/values.yaml
+++ b/charts/anaheim-portal/values.yaml
@@ -5,7 +5,7 @@ anaheim-container:
     repository: ghcr.io/htaic/anaheim-portal/anaheim-container
     pullPolicy: Always
     containerPort: 3000
-    tag: "latest"
+    tag: latest
     hostname: anaheim-container
     envFrom:
       secretRefs:
@@ -43,7 +43,7 @@ anaheim-training-portlet:
     repository: ghcr.io/htaic/anaheim-portal/anaheim-training-portlet
     pullPolicy: Always
     containerPort: 3001
-    tag: "latest"
+    tag: latest
     hostname: anaheim-training-portlet
     domainPath: "training"
     envFrom:
@@ -82,7 +82,7 @@ anaheim-verification-portlet:
     repository: ghcr.io/htaic/anaheim-portal/anaheim-verification-portlet
     pullPolicy: Always
     containerPort: 3002
-    tag: "latest"
+    tag: latest
     hostname: anaheim-verification-portlet
     domainPath: "verify"
     envFrom:
