--- a/charts/hasura/templates/deployment.yaml
+++ b/charts/hasura/templates/deployment.yaml
@@ -44,7 +44,7 @@ spec:
             - secretRef:
                 name: "baseline-postgresql-secret"
             - secretRef:
-                name: "graphql-postgresql-secret"
+                name: "hasura-postgresql-secret"
             - configMapRef:
                 name: "baseline-configmap"
       {{- end }}
@@ -57,8 +57,15 @@ spec:
           envFrom:
             - secretRef:
                 name: "hasura-secret"
-          {{- if .Values.image.env }}
+            - secretRef:
+                name: "graphql-auth-secret" 
           env: 
+            - name: EVENTBRIDGE_HOSTNAME
+              valueFrom:
+                secretKeyRef:
+                  name: "graphql-auth-secret"
+                  key: AWS_EVENTBRIDGE_HOSTNAME          
+          {{- if .Values.image.env }}
             {{- toYaml .Values.image.env | nindent 12 }}
           {{- end }}
           args: [ {{.Values.image.args}} ]
