chore: add wavesync vite config to portal

--- a/charts/anaheim-portal/templates/portal-params.yaml
+++ b/charts/anaheim-portal/templates/portal-params.yaml
@@ -9,3 +9,4 @@ data:
   VITE_ASSETS_API: "/training-assets"
   VITE_ANNOTATOR_API: "/annotations"
   VITE_FEATURE_FLAGS_API: "/feature-flags-service"
+  VITE_WAVESYNC_API: "/wavesync-adapter"
